# svelte-axum-project

./: .gitignore  Cargo.toml  README.md  build-fullstack.sh  package-lock.json  package.json  rollup.config.js
back_end/: Cargo.toml
back_end/src/: main.rs  middlewares.rs  services.rs
back_end/src/middlewares/: authenticator.rs  usersecure.rs
back_end/src/routes/: api.rs  auth.rs  session.rs
front_end/: index.html  package.json  rollup.config.js
front_end/public/: global.css  index.html
front_end/src/: App.svelte
front_end/src/component/: Navbar.svelte
front_end/src/js/: auth.js  fetch.js
front_end/src/pages/: Apicheck.svelte  Login.svelte  Logout.svelte  Secure.svelte
public/: global.css  index.html
src/: main.rs  routes.rs  store.rs
src/middlewares/: authenticator.rs  errorjson.rs  mod.rs  usersecure.rs
src/routes/: api.rs  auth.rs  mod.rs  notimplemented.rs  session.rs
src_front/: App.svelte
src_front/component/: Navbar.svelte
src_front/js/: auth.js  fetch.js  store.js
src_front/pages/: Admin.svelte  Apicheck.svelte  Login.svelte  Logout.svelte  Secure.svelte
