[package]
name = "svelte-axum-project"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/jbertovic/svelte-axum-project"
keywords = ["template", "backend", "frontend", "axum", "svelte"]
license = ""
categories = []
description = ""
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version="0.5.9", features = ["headers"] }
tower-http = { version = "0.3", features = ["full"] }
axum-sessions = "0.3.1"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.1", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
