[package]
name = "svelte-axum-project"
version = "0.4.2"
edition = "2021"
repository = "https://github.com/jbertovic/svelte-axum-project"
keywords = ["template", "backend", "frontend", "axum", "svelte"]
license = ""
categories = []
description = ""
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["headers"] }
tower = "0.4.13"
tower-http = { version = "0.4", features = ["full"] }
tower-sessions = "0.2.2"
tokio = { version = "1.24", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
